# tflite-micro

./: CMakeLists.txt
tensorflow/lite/micro/: micro_profiler.h
tensorflow/lite/micro/benchmarks/: keyword_benchmark.cc  person_detection_benchmark.cc
tensorflow/lite/micro/tools/: generate_cc_arrays.py
